<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="45sp" />

    <Button
        android:id="@+id/funcbutton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:text="@string/func1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/funcbutton5"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/funcbutton3"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="96dp"
        android:text="@string/func5"
        android:textSize="20sp" />

    <Button
        android:id="@+id/funcbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/funcbutton3"
        android:layout_alignRight="@+id/textView1"
        android:text="@string/func2"
        android:textSize="20sp" />

    <Button
        android:id="@+id/funcbutton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/funcbutton1"
        android:layout_alignRight="@+id/funcbutton1"
        android:layout_below="@+id/funcbutton1"
        android:text="@string/func4"
        android:textSize="20sp" />

    <Button
        android:id="@+id/funcbutton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/funcbutton4"
        android:layout_alignBottom="@+id/funcbutton4"
        android:layout_alignLeft="@+id/funcbutton2"
        android:layout_alignRight="@+id/funcbutton2"
        android:text="@string/func3"
        android:textSize="20sp" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignRight="@+id/funcbutton5"
        android:layout_below="@+id/funcbutton5">

	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:gravity="center"
	        android:text="@string/welcome"
	        android:textSize="20sp" />
    </ScrollView>
    
    

</RelativeLayout>